Fixes throbber positioning Adds kbd spacing

--- a/app/css/multiselect.css
+++ b/app/css/multiselect.css
@@ -1,9 +1,15 @@
 .multi-select-wrapper {
-	background: rgba(28,28,28,0.8);
+	background: rgba(28,28,28,0.8); 
     text-align: center;
     position: absolute;
-	left: 0;
-    top: 0;
+	margin-left: auto;
+    margin-right: auto;
+	top:0;
+	display: table; 
+	height: 480px; 
+	overflow: hidden;
+	
+	
 
 /*    -moz-box-align: stretch;*/
 /*	-moz-box-orient: vertical;*/
@@ -14,6 +20,12 @@
 /*	-moz-box-pack: center;*/
 /*	-webkit-box-pack: center;*/
 }
+.multi-select-wrapper > div {
+	display: table-cell; 
+	vertical-align: middle;
+	top:50%;
+}
+
 .multi-select-wrapper .multi-select-shadow {
 	margin: 0 auto; 
 	padding: 4px;
@@ -23,6 +35,7 @@
 }
 .multi-select-wrapper .multi-select-shadow.has-kbd {
 	width: 500px;
+	
 }
 .multi-select-container .tui-kbd-container {
 	text-align: center;
