--- a/app/css/vkbd.css
+++ b/app/css/vkbd.css
@@ -1,7 +1,7 @@
 
 .tui-keyboard {
 	text-align: center;
-	height: 145px;
+	height: 169px;
 }
 
 /*#vkbd {*/
